force-app/main/default/objects/Order/fields/AdditionalNumber__c.field-meta.xml
<CustomField>
    <fullName>AdditionalNumber__c</fullName>
    <externalId>true</externalId>
    <label>Additional Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>