force-app/main/default/objects/Order/fields/AssignedBOS__c.field-meta.xml
<CustomField>
    <fullName>AssignedBOS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned BO Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>