force-app/main/default/objects/Order/fields/CrossMarketManager__c.field-meta.xml
<CustomField>
    <fullName>CrossMarketManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cross Market Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CrossOrders</relationshipName>
    <type>Lookup</type>
</CustomField>