force-app/main/default/objects/Order/fields/DeliveredQuantity_pcs__c.field-meta.xml
<CustomField>
    <fullName>DeliveredQuantity_pcs__c</fullName>
    <label>DeliveredQuantity (pcs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>