force-app/main/default/objects/Order/fields/DispatchedPercentage__c.field-meta.xml
<CustomField>
    <fullName>DispatchedPercentage__c</fullName>
    <formula>DispatchedQuantity__c / TotalOrderQuantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipped (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>