force-app/main/default/objects/Order/fields/DispatchedQuantity__c.field-meta.xml
<CustomField>
    <fullName>DispatchedQuantity__c</fullName>
    <label>Shipped (t)</label>
    <summarizedField>OrderItem.DispatchedQuantity__c</summarizedField>
    <summaryFilterItems>
        <field>OrderItem.DispatchedQuantity__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>