force-app/main/default/objects/Order/fields/DispatchedQuantity_pcs__c.field-meta.xml
<CustomField>
    <fullName>DispatchedQuantity_pcs__c</fullName>
    <label>DispatchedQuantity (pcs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>