force-app/main/default/objects/Order/fields/EffectiveDateAux__c.field-meta.xml
<CustomField>
    <fullName>EffectiveDateAux__c</fullName>
    <description>Service field used only for technical needs (shouldn&apos;t be placed on page layouts)</description>
    <label>Order Start Date (Auxiliary)</label>
    <type>Date</type>
</CustomField>