force-app/main/default/objects/Order/fields/ERP_CreatedDateTime__c.field-meta.xml
<CustomField>
    <fullName>ERP_CreatedDateTime__c</fullName>
    <label>ERP Created DateTime</label>
    <type>DateTime</type>
</CustomField>