force-app/main/default/objects/Order/fields/ERP_LastPayloadHash__c.field-meta.xml
<CustomField>
    <fullName>ERP_LastPayloadHash__c</fullName>
    <label>ERP Last Payload Hash</label>
    <length>64</length>
    <type>Text</type>
</CustomField>