force-app/main/default/objects/Order/fields/ERP_LastSyncAt__c.field-meta.xml
<CustomField>
    <fullName>ERP_LastSyncAt__c</fullName>
    <label>ERP Last Sync At</label>
    <type>DateTime</type>
</CustomField>