force-app/main/default/objects/Order/fields/ERP_OrderDate__c.field-meta.xml
<CustomField>
    <fullName>ERP_OrderDate__c</fullName>
    <label>ERP Order Date</label>
    <type>DateTime</type>
</CustomField>