force-app/main/default/objects/Order/fields/ERP_SyncState__c.field-meta.xml
<CustomField>
    <fullName>ERP_SyncState__c</fullName>
    <label>ERP Sync State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>WARNING</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
            <value>
                <fullName>MISSING_IN_ERP</fullName>
                <isActive>false</isActive>
                <label>MISSING_IN_ERP</label>
            </value>
            <value>
                <fullName>SKIPPED</fullName>
                <isActive>false</isActive>
                <label>SKIPPED</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>