force-app/main/default/objects/Order/fields/InitialOwnerName__c.field-meta.xml
<CustomField>
    <fullName>InitialOwnerName__c</fullName>
    <label>Initial Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>