force-app/main/default/objects/Order/fields/IsSecondChoice__c.field-meta.xml
<CustomField>
    <fullName>IsSecondChoice__c</fullName>
    <formula>SecondChoiceProductsNumber__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Second Choice</label>
    <type>Checkbox</type>
</CustomField>