force-app/main/default/objects/Order/fields/ITENumber__c.field-meta.xml
<CustomField>
    <fullName>ITENumber__c</fullName>
    <description>The order number in IT-Enterprise system.</description>
    <externalId>true</externalId>
    <inlineHelpText>The order number in IT-Enterprise system.</inlineHelpText>
    <label>ITE Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>