force-app/main/default/objects/Order/fields/Margin_t__c.field-meta.xml
<CustomField>
    <fullName>Margin_t__c</fullName>
    <formula>Margin__c / ShippedQuantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin (per t)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>