force-app/main/default/objects/Order/fields/OrderAddName__c.field-meta.xml
<CustomField>
    <fullName>OrderAddName__c</fullName>
    <formula>ITENumber__c + &apos; | &apos; + AdditionalNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Add. Name</label>
    <type>Text</type>
</CustomField>