force-app/main/default/objects/Order/fields/OwnerId__c.field-meta.xml
<CustomField>
    <fullName>OwnerId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order`s Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UserOrders</relationshipName>
    <type>Lookup</type>
</CustomField>