force-app/main/default/objects/Order/fields/PaymentTerms__c.field-meta.xml
<CustomField>
    <fullName>PaymentTerms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Terms</label>
    <referenceTo>PaymentTerms__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>