force-app/main/default/objects/Order/fields/Prod_Type__c.field-meta.xml
<CustomField>
    <fullName>Prod_Type__c</fullName>
    <formula>IF(ISPICKVAL(MarketSegment__c, &apos;00006&apos;), &apos;WHEELS&apos;, &apos;TUBES&apos; )</formula>
    <label>Prod. Type</label>
    <type>Text</type>
</CustomField>