force-app/main/default/objects/Order/fields/ProducedPercentage__c.field-meta.xml
<CustomField>
    <fullName>ProducedPercentage__c</fullName>
    <formula>ProducedQuantity__c / TotalOrderQuantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Produced (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>