force-app/main/default/objects/Order/fields/ProducedQuantity__c.field-meta.xml
<CustomField>
    <fullName>ProducedQuantity__c</fullName>
    <label>Produced (t)</label>
    <summarizedField>OrderItem.ProducedQuantity__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>