force-app/main/default/objects/Order/fields/ProducedQuantity_pcs__c.field-meta.xml
<CustomField>
    <fullName>ProducedQuantity_pcs__c</fullName>
    <label>ProducedQuantity (pcs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>