force-app/main/default/objects/Order/fields/Quantity_pcs__c.field-meta.xml
<CustomField>
    <fullName>Quantity_pcs__c</fullName>
    <label>Quantity (pcs)</label>
    <summarizedField>OrderItem.Quantity_pcs__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>