force-app/main/default/objects/Order/fields/Revenue__c.field-meta.xml
<CustomField>
    <fullName>Revenue__c</fullName>
    <label>Revenue</label>
    <summarizedField>OrderItemProductInfoKLW__c.Inq_Total__c</summarizedField>
    <summaryForeignKey>OrderItemProductInfoKLW__c.Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>