force-app/main/default/objects/Order/fields/SecondChoiceProductsNumber__c.field-meta.xml
<CustomField>
    <fullName>SecondChoiceProductsNumber__c</fullName>
    <description>Number of related products marked as second choice.</description>
    <label>Second Choice Products Number</label>
    <summaryFilterItems>
        <field>OrderItem.IsSecondChoiceProduct__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>