force-app/main/default/objects/Order/fields/ShippedPercentage__c.field-meta.xml
<CustomField>
    <fullName>ShippedPercentage__c</fullName>
    <formula>ShippedQuantity__c / TotalOrderQuantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivered acc to Incoterms (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>