force-app/main/default/objects/Order/fields/ShippedQuantity__c.field-meta.xml
<CustomField>
    <fullName>ShippedQuantity__c</fullName>
    <label>Delivered acc to Incoterms (t)</label>
    <summarizedField>OrderItem.ShippedQuantity__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>