force-app/main/default/objects/Order/fields/SumDebts__c.field-meta.xml
<CustomField>
    <fullName>SumDebts__c</fullName>
    <label>Summary Order Debts</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>