force-app/main/default/objects/Order/fields/TotalOrderQuantity__c.field-meta.xml
<CustomField>
    <fullName>TotalOrderQuantity__c</fullName>
    <label>Quantity (t)</label>
    <summarizedField>OrderItem.Quantity</summarizedField>
    <summaryFilterItems>
        <field>OrderItem.Quantity</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>