force-app/main/default/objects/Order/fields/WheelContract__c.field-meta.xml
<CustomField>
    <fullName>WheelContract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wheel Contract</label>
    <referenceTo>WheelContract__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>