force-app/main/default/objects/Order/listViews/All_Orders_ETA.listView-meta.xml
<ListView>
    <fullName>All_Orders_ETA</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>AdditionalNumber__c</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>TotalOrderQuantity__c</columns>
    <columns>ProducedQuantity__c</columns>
    <columns>DispatchedQuantity__c</columns>
    <columns>ShippedQuantity__c</columns>
    <columns>Margin__c</columns>
    <columns>Margin_t__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MarketSegment__c</field>
        <operation>equals</operation>
        <value>00020</value>
    </filters>
    <label>All Orders ETA</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Senior_Sales_Manager_Europe_Africa</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>