force-app/main/default/objects/Order/listViews/Closed_Orders.listView-meta.xml
<ListView>
    <fullName>Closed_Orders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>ITENumber__c</columns>
    <columns>MarketSegment__c</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>AdditionalNumber__c</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>TotalOrderQuantity__c</columns>
    <columns>ProducedQuantity__c</columns>
    <columns>DispatchedQuantity__c</columns>
    <columns>ShippedQuantity__c</columns>
    <columns>ID_ERP__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.STATUS</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>MarketSegment__c</field>
        <operation>equals</operation>
        <value>00006</value>
    </filters>
    <label>Closed Orders</label>
</ListView>