force-app/main/default/objects/Order/listViews/Shipped_Orders.listView-meta.xml
<ListView>
    <fullName>Shipped_Orders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>ITENumber__c</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>AdditionalNumber__c</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>TotalOrderQuantity__c</columns>
    <columns>ProducedQuantity__c</columns>
    <columns>DispatchedQuantity__c</columns>
    <columns>ShippedQuantity__c</columns>
    <columns>ID_ERP__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ShippedPercentage__c</field>
        <operation>greaterOrEqual</operation>
        <value>100</value>
    </filters>
    <label>Shipped Orders</label>
</ListView>